# splash-can

./: .gitignore  Cargo.toml
cgci/: Cargo.toml
cgci/src/: lib.rs
engine/: Cargo.toml
engine/shaders/: compile.sh
engine/shaders/spv/: vert.spv
engine/shaders/src/: shader-base.vert
engine/src/: lib.rs  pipeline.rs  platforms.rs  validation.rs
gui/: Cargo.toml
gui/src/: lib.rs
paint-app/: Cargo.toml
paint-app/src/: main.rs
