[package]
name = "engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.29"
winit = "0.20.0"
gui = { path = "../gui" }
cgci = { path = "../cgci" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"
metal = "0.24.0"
objc  = "0.2.5"
